# dev-tool

./: Cargo.toml  README.md  README_zh.md  build.rs
.cargo/: config.toml
resources/: app.manifest
src/: lib.rs  main.rs
src/gui/: main.slint
src/gui/components/: json_panel.slint  single_line_edit.slint  styled_button.slint  timestamp_panel.slint
src/handlers/: json_handler.rs  mod.rs  timestamp_handler.rs
src/logic/: event.rs  json.rs  mod.rs  time.rs
src/modules/: json_formatter.rs  mod.rs  timestamp.rs
src/services/: config.rs  mod.rs  storage.rs
src/ui/: main.slint  mod.rs  mod.slint
src/ui/components/: common.slint  json_tool.slint  mod.slint  time_tool.slint
src/ui/layouts/: base.slint  grid.slint  mod.slint
src/ui/themes/: colors.slint  fonts.slint  mod.slint  styles.slint
src/utils/: json.rs  mod.rs  time.rs
