[package]
name = "dev-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.4"
chrono = "0.4"
serde_json = "1.0"

# Windows 配置
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
slint-build = "1.6.0"
winres = "0.1"

# Windows 特定配置
[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"

# Windows 子系统设置
[package.metadata.cargo-winrt]
subsystem = "windows"

[package.metadata.winres]
OriginalFilename = "dev-tool.exe"
LegalCopyright = "Copyright © 2024"
FileDescription = "Developer Tool"
ProductName = "Developer Tool"
ProductVersion = "1.0.0"
