[package]
name = "dev_tool"
version = "0.1.0"
edition = "2021"
description = "开发工具集"

[dependencies]
slint = "1.4"
i-slint-backend-selector = "1.4"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
directories = "5.0"

[build-dependencies]
slint-build = "1.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(windows)'.build]
rustflags = ["-C", "link-args=/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup"]